syntax = "proto3";

option csharp_namespace = "Protos.Activities.GetActivitiesByUserId";

package getactivitiesbyuserid;

import "google/type/datetime.proto";

message GetActivitiesByUserIdResponse {
	string UserId = 1;
	repeated ActivityDto Activities = 2;
}

message ActivityDto {
  string Id = 1;
  string ActionId = 2;
  string RaceId = 3;
  string CategoryId = 4;
  string TypeId = 5;
  string Name = 6;
  string Description = 7;
  google.type.DateTime Start = 8;
  google.type.DateTime End = 9;
  bool IsPublic = 10;
  repeated PositionDto Positions = 11;
  repeated PetDto Pets = 12;
}

message PositionDto {
  string Id = 1;
  google.type.DateTime Time = 2;
  double Latitude = 3;
  double Longitude = 4;
  double Altitude = 5;
  double Accuracy = 6;
  double Course = 7;
  string Note = 8;
  repeated string PhotoUris = 9;
}

message PetDto {
  string Id = 1;
  string Chip = 2;
  string Name = 3;
  string Breed = 4;
  string Color = 5;
  string Kennel = 6;
  google.type.DateTime BirthDate = 7;
}